--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>test</h1>
     <div class="container">
         <canvas id="example_canvas" class="canvas-example"></canvas>
     </div>
